--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
-  <head><title>Prueba</title></head>
+  <head>
+    <meta charset="UTF-8">
+    <title>Prueba</title>
+  </head>
   <body><h1>Aplicación en funcionamiento</h1></body>
 </html>
